--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h3 class="titulo" >Cursos</h3>
             <h3 ></h3>
                 <div class="cursos">
-                    <li>HTMl 5 e CSS 3 - Avançado</li>
+                    <li>HTML 5 e CSS 3 - Avançado</li>
                     <li>JavaScript - Basico ao Avançado</li>
                     <li>Ciência de Dados - FGV</li>
                     <li>Privacidade e Proteção de Dados ( LGPD ) - Senai</li>
