ajustes no curriculo para curriculum

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Luiz Henrique Almeida</title>
+    <title>Curriculo Luiz Henrique Almeida</title>
 </head>
 <body>
     <header>
@@ -95,8 +95,8 @@
 
            
 
-            <a href="./CURRICULO LUIZ HENRIQUE ALMEIDA.pdf" download><img width="30px" src="download-direto.png">
-                <p>Baixar Curriculo</p>
+            <a href="./CURRICULUM VITAE.pdf" download><img width="30px" src="download-direto.png">
+                <p>Baixar Curriculum</p>
             </a>
         </div>
     </nav>
